--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 		<div id="arrow-down"></div>
 		<div id="arrow-left" class="disabled visible-lg"></div>
 		<div id="arrow-right" class="disabled visible-lg"></div>
+		<div class="share-button"></div>
 	</div><!-- /.arrows -->
 	
 	
@@ -500,7 +501,6 @@
 			</div><!-- /row -->
 		</div><!-- /container -->
 	</div><!-- /Slide 8 -->
-	
 </body>
 
 	<!-- SCRIPTS -->
@@ -511,6 +511,8 @@
 	<script src="js/jquery.easing.1.3.js"></script>
 	<script type="text/javascript" src="fancybox/jquery.fancybox.pack-v=2.1.5.js"></script>
 	<script src="js/script.js"></script>
+	<script src="js/share.min.js"></script>
+	
 	
 	<!-- fancybox init -->
 	<script>
@@ -529,7 +531,7 @@
 		$('.re-link').on('click',function(){
 			window.location = this.href || this.getAttribute('data-url');
 		});
-	
+		new Share('.share-button');
 	});
 	</script>
 	<script type="text/javascript">
