--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 						<p>15.保持唤醒状态(默认开启).</p>
 						<p>16.查看当前页面的HAR.(另推荐 <a class="re-link" href="https://github.com/unbug/logproxy">logproxy</a>)</p>
 						<p>17.Performance API.</p>
-						<p>18.Polyfill Manager(模拟javascript调用Native App的接口及回调,<a class="re-link" href="http://v.youku.com/v_show/id_XNTc5ODUxNDY4.html">demo</a>)</p>
+						<p>18.Polyfill Manager(模拟javascript与Native App互相调用,<a class="re-link" href="http://v.youku.com/v_show/id_XNTc5ODUxNDY4.html">demo</a>)</p>
 						<p>19.NPM Modules (在 web inspector console 里通过 require() 加载 npm 模块)</p>
 					  </div>
 					  <div class="tab-pane" id="features_iphone_zh">
@@ -236,7 +236,7 @@
 						<p>8.全屏模式(摇一摇设备切换全屏).</p>
 						<p>9.保持唤醒状态(默认开启).</p>
 						<p>10.Performance API.</p>
-						<p>11.Polyfill管理器(模拟javascript调用Native App的接口及回调,<a class="re-link" href="http://v.youku.com/v_show/id_XNTc5ODUxNDY4.html">demo</a>)</p>
+						<p>11.Polyfill管理器(模拟javascript与Native App互相调用,<a class="re-link" href="http://v.youku.com/v_show/id_XNTc5ODUxNDY4.html">demo</a>)</p>
 						<p>12.NPM Modules (在 web inspector console 里通过 require() 加载 npm 模块)</p>
 					  </div>
 					</div>
@@ -296,7 +296,7 @@
 	<div class="slide story white" id="slide-7" data-slide="7">
 		<div class="container">
 			<div class="row title-row">
-				<div class="col-12 font-light">Thanks</div>
+				<div class="col-12 font-light">Special Thanks</div>
 			</div><!-- /row -->
 			<div class="row line-row">
 				<div class="hr">&nbsp;</div>
@@ -325,29 +325,31 @@
 			<div class="row subtitle-row">
 				<div class="col-sm-1 hidden-sm">&nbsp;</div>
 				<div class="col-12 font-light">
-					<h2>Inline web inspector</h2>
 					<ul class="nav nav-tabs" role="tablist" id="videosTab1">
 					  <li class="active"><a href="#videosTab1_1" role="tab" data-toggle="tab">YouTube</a></li>
 					  <li><a href="#videosTab1_2" role="tab" data-toggle="tab">Youku</a></li>
 					</ul>
 					<div class="tab-content">
 					  <div class="tab-pane active" id="videosTab1_1">
+						<h2 class="left-ajust">Inline web inspector</h2>
 					  	<iframe width="640" height="480" src="//www.youtube.com/embed/I-joxZbdk0s" frameborder="0" allowfullscreen></iframe>
 					  </div>
 					  <div class="tab-pane" id="videosTab1_2">
+					  	<h2 class="left-ajust">iPad版内嵌的 web inspector</h2>
 					  	<iframe src="http://player.youku.com/embed/XNTA4NjA0Mzg4" width="510" height="498" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
 					  </div>
 					</div>
-	                <h2>Polyfill Manager(simulate APIs for javaScript to Objective-C communication)</h2>
 					<ul class="nav nav-tabs" role="tablist" id="videosTab2">
 					  <li class="active"><a href="#videosTab2_1" role="tab" data-toggle="tab">YouTube</a></li>
 					  <li><a href="#videosTab2_2" role="tab" data-toggle="tab">Youku</a></li>
 					</ul>
 					<div class="tab-content">
 					  <div class="tab-pane active" id="videosTab2_1">
+					  	<h2 class="left-ajust">Polyfill Manager(simulate APIs for javaScript to Objective-C communication)</h2>
 					  	<iframe width="640" height="480" src="//www.youtube.com/embed/uL2feHKevRE" frameborder="0" allowfullscreen></iframe>
 					  </div>
 					  <div class="tab-pane" id="videosTab2_2">
+		                <h2 class="left-ajust">Polyfill Manager(模拟javascript与Native App互相调用)</h2>
 					  	<iframe src="http://player.youku.com/embed/XNTc5ODUxNDY4" width="510" height="498" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
 					  </div>
 					</div>
