--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 			<div id="home-row-1" class="row clearfix">
 				<div class="col-12">
 					<img src="images/mih/logo/iPad-Retina.png" width="80"/>
-					<h1 class="font-semibold">MIHTool <span class="font-thin">6.0</span></h1>
+					<h1 class="font-semibold">MIHTool <span class="font-thin"><a class="top_version" href="#slide-9" onclick="goToByScroll(9)">6.1</a></span></h1>
 					<h4 class="font-thin">MIHTool helps Front-End Engineers to  <span class="font-semibold">debug</span> and  <span class="font-semibold">optimize</span> their webpages on iPad and iPhone</h4>
 					<br>
 					<br>
@@ -93,7 +93,7 @@
 			<div id="home-row-2" class="row clearfix">
 				<div class="col-12 col-sm-4"><div class="home-hover navigation-slide" data-slide="2"><i class="icon icon-download-alt"></i></div><span>INSTALL</span></div>
 				<div class="col-12 col-sm-4"><div class="home-hover navigation-slide" data-slide="4"><i class="icon icon-gift"></i></div><span>FEATURES</span></div>
-				<div class="col-12 col-sm-4"><div class="home-hover navigation-slide" data-slide="3"><i class="icon icon-camera" width="64"></i></div><span>SCREENSHOTS</span></div>
+				<div class="col-12 col-sm-4"><div class="home-hover navigation-slide" data-slide="8"><i class="icon icon-facetime-video"></i></div><span>VIDEOS</span></div>
 			</div><!-- /row -->
 		</div><!-- /container -->
 	</div><!-- /slide1 -->
@@ -317,7 +317,7 @@
 	<div class="slide story black" id="slide-8" data-slide="8">
 		<div class="container">
 			<div class="row title-row">
-				<div class="col-12 font-light">Videos</div>
+				<div class="col-12 font-light">Demonstration Videos</div>
 			</div><!-- /row -->
 			<div class="row line-row">
 				<div class="hr">&nbsp;</div>
@@ -373,12 +373,33 @@
 					  <div class="panel panel-default">
 					    <div class="panel-heading">
 					      <h4 class="panel-title">
+					        <a data-toggle="collapse" data-parent="#log_accordion" href="#log_v6_1">
+					          V6.1-2014.09.07
+					        </a>
+					      </h4>
+					    </div>
+					    <div id="log_v6_1" class="panel-collapse collapse in">
+					      <div class="panel-body">
+					      	<p>For iPad<br>
+								1.+Add,Update inline Web Inspector.<br>
+								2.+Add,Update Online Web Inspector.<br>
+								3.+Add,Update remote Web Inspector.<br>
+								For iPhone<br>
+								1.+Add,Update Online Web Inspector.<br>
+								2.+Add,Update remote Web Inspector.
+							</p>
+					      </div>
+					    </div>
+					  </div>
+					  <div class="panel panel-default">
+					    <div class="panel-heading">
+					      <h4 class="panel-title">
 					        <a data-toggle="collapse" data-parent="#log_accordion" href="#log_v6_0">
 					          V6.0-2014.09.05
 					        </a>
 					      </h4>
 					    </div>
-					    <div id="log_v6_0" class="panel-collapse collapse in">
+					    <div id="log_v6_0" class="panel-collapse collapse">
 					      <div class="panel-body">
 					      	<p>For iPad<br>
 								1.!+Add,NPM Modules (To require() any module on npm in web inspector console with browserify).<br>
