--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 			</div><!-- /row -->
 			<div class="row subtitle-row">
 				<img src="images/mih/screenshots/qr-150x150.png" width="100"/>
-				<div class="col-12 font-thin" style="font-size: 26px;">MIHTool is free!If you love MIHTool and like to help me to make MIHTool better,I’ll appreciate you could&nbsp;<a class="re-link" href="https://itunes.apple.com/us/app/mihtool-web-debugger-pro-fee/id599482707?ls=1&amp;mt=8">buy&nbsp;one</a>!</div>
+				<div class="col-12 font-thin" style="font-size: 26px;">MIHTool is free!If you love MIHTool and like to help me to make MIHTool better,I'll appreciate you could&nbsp;<a class="re-link" href="https://itunes.apple.com/us/app/mihtool-web-debugger-pro-fee/id599482707?ls=1&amp;mt=8">buy&nbsp;one</a>!</div>
 			</div><!-- /row -->
 			<div class="row content-row">
 				<div class="col-12 col-lg-3 col-sm-6">
