--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 			</div><!-- /row -->
 			<div class="row subtitle-row">
 				<img src="images/mih/screenshots/qr-150x150.png" width="100"/>
-				<div class="col-12 font-thin" style="font-size: 26px;">MIHTool is free!If you love MIHTool and like to help me to make MIHTool better,I'll appreciate you could&nbsp;<a class="re-link" href="https://itunes.apple.com/us/app/mihtool-web-debugger-pro-fee/id599482707?ls=1&amp;mt=8">buy&nbsp;one</a>!</div>
+				<div class="col-12 font-thin" style="font-size: 26px;">MIHTool is free!If you love MIHTool and like to help me to make MIHTool better,I'll appreciate you could <a class="re-link" href="https://itunes.apple.com/us/app/mihtool-web-debugger-pro-fee/id599482707?ls=1&amp;mt=8">install the Pro one</a>!</div>
 			</div><!-- /row -->
 			<div class="row content-row">
 				<div class="col-12 col-lg-3 col-sm-6">
@@ -165,7 +165,7 @@
 					  <li><a href="#features_iphone_zh" role="tab" data-toggle="tab">iPhone版(中文)</a></li>
 					</ul>
 					<div class="tab-content">
-					  <div class="tab-pane active" id="features_ipad">
+					  <div class="tab-pane fade in active" id="features_ipad">
 						  <h2 class="bs-callout bs-callout-info">MIHTool helps Front-End Engineers to debug and optimize their webpages on iPad and iPhone</h2>
 			              <p>1.Inline Web inspector(like Chrome DevTool or FireBug):With Elements,Resources,Network,Timeline,Console panel.</p>
 			              <p>2.Web inspector remote(weinre):remote to debug and optimize your mobile webpages on your computer(window,mac,linux with chrome).</p>
@@ -187,7 +187,7 @@
 			              <p>18.Polyfill Manager(simulate APIs for javaScript to Objective-C communication,<a target="_blank" class="re-link" href="http://youtu.be/uL2feHKevRE">demo</a>)</p>
 			              <p>19.NPM Modules (To require() any module on npm in web inspector console <a target="_blank" class="re-link" href="https://gist.github.com/mathisonian/c325dbe02ea4d6880c4e">with browserify</a>)</p>
 					  </div>
-					  <div class="tab-pane" id="features_iphone">
+					  <div class="tab-pane fade" id="features_iphone">
 						  <h2 class="bs-callout bs-callout-info">MIHTool helps Front-End Engineers to debug and optimize their webpages on iPad and iPhone</h2>
 			              <p>1.Web inspector remote(weinre):remote to debug and optimize your mobile webpages on your computer(window,mac,linux with chrome).</p>
 			              <p>2.Online Web Inspector.</p>
@@ -202,7 +202,7 @@
 			              <p>11.Polyfill Manager(simulate APIs for javaScript to Objective-C communication,<a target="_blank" class="re-link" href="http://youtu.be/uL2feHKevRE">demo</a>)</p>
 			              <p>12.NPM Modules (To require() any module on npm in web inspector console <a target="_blank" class="re-link" href="https://gist.github.com/mathisonian/c325dbe02ea4d6880c4e">with browserify</a>)</p>
 					  </div>
-					  <div class="tab-pane" id="features_ipad_zh">
+					  <div class="tab-pane fade" id="features_ipad_zh">
 					  	<h2 class="bs-callout bs-callout-info">MIHTool 是前端工程师在iOS设备上调试和优化页面的得力助手.</h2>
 					  	<p>1.内嵌 Web inspector(类似于 Chrome DevTool 或 FireBug):有 Elements,Resources,Network,Timeline,Console 面板.</p>
 						<p>2.远程打开Web inspector调试:在电脑(window,mac,linux,仅需装有chrome)上远程调试手机里的页面.</p>
@@ -224,7 +224,7 @@
 						<p>18.Polyfill Manager(模拟javascript与Native App互相调用,<a class="re-link" href="http://v.youku.com/v_show/id_XNTc5ODUxNDY4.html">demo</a>)</p>
 						<p>19.NPM Modules (在 web inspector console 里通过 require() 加载 npm 模块)</p>
 					  </div>
-					  <div class="tab-pane" id="features_iphone_zh">
+					  <div class="tab-pane fade" id="features_iphone_zh">
 					  	<h2 class="bs-callout bs-callout-info">MIHTool 是前端工程师在iOS设备上调试和优化页面的得力助手.</h2>
 					  	<p>1.远程打开Web inspector调试:在电脑(window,mac,linux,仅需有chrome)上远程调试手机里的页面.</p>
 						<p>2.在线远程打开Web Inspector调试.</p>
@@ -330,11 +330,11 @@
 					  <li><a href="#videosTab1_2" role="tab" data-toggle="tab">Youku</a></li>
 					</ul>
 					<div class="tab-content">
-					  <div class="tab-pane active" id="videosTab1_1">
+					  <div class="tab-pane fade in active" id="videosTab1_1">
 						<h2 class="left-ajust">Inline web inspector</h2>
 					  	<iframe width="640" height="480" src="//www.youtube.com/embed/I-joxZbdk0s" frameborder="0" allowfullscreen></iframe>
 					  </div>
-					  <div class="tab-pane" id="videosTab1_2">
+					  <div class="tab-pane fade" id="videosTab1_2">
 					  	<h2 class="left-ajust">iPad版内嵌的 web inspector</h2>
 					  	<iframe src="http://player.youku.com/embed/XNTA4NjA0Mzg4" width="510" height="498" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
 					  </div>
@@ -344,11 +344,11 @@
 					  <li><a href="#videosTab2_2" role="tab" data-toggle="tab">Youku</a></li>
 					</ul>
 					<div class="tab-content">
-					  <div class="tab-pane active" id="videosTab2_1">
+					  <div class="tab-pane fade in active" id="videosTab2_1">
 					  	<h2 class="left-ajust">Polyfill Manager(simulate APIs for javaScript to Objective-C communication)</h2>
 					  	<iframe width="640" height="480" src="//www.youtube.com/embed/uL2feHKevRE" frameborder="0" allowfullscreen></iframe>
 					  </div>
-					  <div class="tab-pane" id="videosTab2_2">
+					  <div class="tab-pane fade" id="videosTab2_2">
 		                <h2 class="left-ajust">Polyfill Manager(模拟javascript与Native App互相调用)</h2>
 					  	<iframe src="http://player.youku.com/embed/XNTc5ODUxNDY4" width="510" height="498" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
 					  </div>
