--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				<ul class="nav row">
 					<li data-slide="1" class="col-12 col-sm-2"><a id="menu-link-1" href="#slide-1" title="Home"><span class="icon icon-home"></span> <span class="text">HOME</span></a></li>
 					<li data-slide="2" class="col-12 col-sm-2"><a id="menu-link-2" href="#slide-2" title="Getting started"><span class="icon icon-download"></span> <span class="text">INSTALL</span></a></li>
-					<li data-slide="3" class="col-12 col-sm-2"><a id="menu-link-3" href="#slide-3" title="Screenshots"><span class="icon icon-picture"></span> <span class="text">SCREENSHOTS</span></a></li>
+					<li data-slide="3" class="col-12 col-sm-2"><a id="menu-link-3" href="#slide-3" title="Screenshots"><span class="icon icon-picture"></span> <span class="text">PHOTOS</span></a></li>
 					<li data-slide="4" class="col-12 col-sm-2"><a id="menu-link-4" href="#slide-4" title="What MIHTool can do"><span class="icon icon-gift"></span> <span class="text">FEATURES</span></a></li>
 					<li data-slide="5" class="col-12 col-sm-2"><a id="menu-link-5" href="#slide-5" title="Whst devs say about MIHTool"><span class="icon icon-bullhorn"></span> <span class="text">LEARN</span></a></li>
 					<li data-slide="6" class="col-12 col-sm-2"><a id="menu-link-6" href="#slide-6" title="Bug reports"><span class="icon icon-envelope"></span> <span class="text">SUPPORT</span></a></li>
