--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 				<div class="col-sm-1 hidden-sm">&nbsp;</div>
 				<div class="col-12 font-light left-ajust">
 	              <ul>
-	                <li><a class="re-link" href="http://paulbakaus.com/" target="_blank">Paul Bakaus</a>(Studio 5 CTO at Zynga)’s features guidance</li>
+	                <li><a class="re-link" href="http://paulbakaus.com/" target="_blank">Paul Bakaus</a>(Studio 5 CTO at Zynga)'s features guidance</li>
 	                <li>App Icon designed by&nbsp;<a class="re-link" href="https://twitter.com/Rude" target="_blank">Rude</a>(Graphic and interaction design specialist at Mortensen)</li>
 	              </ul>
 				</div>
