--- a/index.html
+++ b/index.html
@@ -167,10 +167,69 @@
 					<div class="tab-content">
 					  <div class="tab-pane fade in active" id="features_ipad">
 						  <h2 class="bs-callout bs-callout-info">MIHTool helps Front-End Engineers to debug and optimize their webpages on iPad and iPhone</h2>
-			              <p>1.Inline Web inspector(like Chrome DevTool or FireBug):With Elements,Resources,Network,Timeline,Console panel.</p>
-			              <p>2.Web inspector remote(weinre):remote to debug and optimize your mobile webpages on your computer(window,mac,linux with chrome).</p>
-			              <p>3.Online Web Inspector.</p>
-			              <p>4.HTML editor:view webpage source code with syntax highlighting and formatting;editing source code or creare a new webpage and preview the result.</p>
+			              <p>1.Inline Web inspector(like Chrome DevTool or FireBug):With Elements,Resources,Network,Timeline,Console panel.
+			              	<button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_0">Learn More...</button>
+			              	<section id="features_ipad_0" class="features-detail collapse row">
+			              		<div class="col-4">
+				              		<img src="images/mih/screenshots/0.png"/>
+			              		</div>
+			              		<div class="col-8">
+			              			Inline Web inspector is an iPad only feature.Which makes you possible to inspector your webpages right on your iPad without a desktop computer.
+			              			<br />
+			              			Just like Chrome DevTools,it has Elements,Resources,Network,Timeline and Console panel.And it totaly optimized for touch screen.
+			              			You can maximize,minimize,zoom-in and zoom-out.
+			              			<br />
+			              			Note: If you can't see any logs in Network or Timeline panel,be sure the record circle switcher is <span style="color: red;">RED</span>.
+			              			<br />
+			              			Please check this <a href="#slide-8" onclick="goToByScroll(8)">video</a> to see how it works.
+			              			<br />
+			              			Web inspector is based on <a href="http://people.apache.org/~pmuellr/weinre-docs/latest/" class="re-link">weinre</a>,bug reports please check <a class="re-link" href="https://groups.google.com/forum/?fromgroups#!forum/weinre">weinre google group</a>.
+			              		</div>
+			              	</section>
+			              </p>
+			              <p>2.Web inspector remote(weinre):remote to debug and optimize your mobile webpages on your computer(window,mac,linux with chrome).
+			              	<button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_1">Learn More...</button>
+			              	<section id="features_ipad_1" class="features-detail collapse row">
+			              		<div class="col-6">
+			              			Web inspector remote makes you possible to inspector your webpages with any remote computer(window,mac,linux,or another iPad) in the same local network.
+			              			<br />
+			              			Just like Chrome DevTools,it has Elements,Resources,Network,Timeline and Console panel.
+			              			<br />
+			              			Note: If you can't see any logs in Network or Timeline panel,be sure the record circle switcher is <span style="color: red;">RED</span>.
+			              			<br />
+			              			Web inspector is based on <a href="http://people.apache.org/~pmuellr/weinre-docs/latest/" class="re-link">weinre</a>,bug reports please check <a class="re-link" href="https://groups.google.com/forum/?fromgroups#!forum/weinre">weinre google group</a>.
+			              		</div>
+			              		<div class="col-6">
+				              		<img src="images/mih/screenshots/8.png">
+				              		<img src="images/mih/screenshots/3.png"/>
+			              		</div>
+			              	</section>
+			              </p>
+			              <p>3.Online Web Inspector.
+				              <button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_2">Learn More...</button>
+				              	<section id="features_ipad_2" class="features-detail collapse row">
+				              		<div class="col-12">
+				              			Online web inspector just works as web inspector remote.But is allows you to inspector your webpages with any online remote computer even they are not in the same local network.
+				              			<br />
+				              			Some time your devices are in the local network but may not be accessed by each other,so web inspector remote won't work for you,but if your devices can access external network,online web inspector will work just fine.
+				              		</div>
+				              	</section>
+			              </p>
+			              <p>4.HTML editor:view webpage source code with syntax highlighting and formatting;editing source code or creare a new webpage and preview the result.
+			              <button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_3">Learn More...</button>
+				              	<section id="features_ipad_3" class="features-detail collapse row">
+				              		<div class="col-4">
+				              			<img src="images/mih/screenshots/2.png"/>
+				              		</div>
+				              		<div class="col-8">
+				              			HTML editor is an iPad only feature.Which makes you possible to view and edit any webpages source code with syntax highlighting right on your iPad.
+				              			<br />
+				              			Sure you can create a new webpage with HTML editor and view the result,you also can format the source code or just share them with your friends.
+				              			<br />
+				              			It totaly optimized for touch screen.
+				              		</div>
+				              	</section>
+			              </p>
 			              <p>5.Remote control(With HTTP Server):Remote to,Load URL in MIHTool|Safari|Chrome;Inject Javascript in current webpage;Clear website data;Get HAR data;Get source code;Get screenshots…</p>
 			              <p>6.Show WebKit Debug Borders(Compositing Render Layers).</p>
 			              <p>7.Show Webkit Repaint Counter(Paint Rects).</p>
