--- a/index.html
+++ b/index.html
@@ -170,10 +170,10 @@
 			              <p>1.Inline Web inspector(like Chrome DevTool or FireBug):With Elements,Resources,Network,Timeline,Console panel.
 			              	<button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_0">Learn More...</button>
 			              	<section id="features_ipad_0" class="features-detail collapse row">
-			              		<div class="col-4">
+			              		<div class="col-6">
 				              		<img src="images/mih/screenshots/0.png"/>
 			              		</div>
-			              		<div class="col-8">
+			              		<div class="col-6">
 			              			Inline Web inspector is an iPad only feature.Which makes you possible to inspector your webpages right on your iPad without a desktop computer.
 			              			<br />
 			              			Just like Chrome DevTools,it has Elements,Resources,Network,Timeline and Console panel.And it totaly optimized for touch screen.
@@ -216,35 +216,121 @@
 				              	</section>
 			              </p>
 			              <p>4.HTML editor:view webpage source code with syntax highlighting and formatting;editing source code or creare a new webpage and preview the result.
-			              <button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_3">Learn More...</button>
+			              		<button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_3">Learn More...</button>
 				              	<section id="features_ipad_3" class="features-detail collapse row">
-				              		<div class="col-4">
+				              		<div class="col-6">
 				              			<img src="images/mih/screenshots/2.png"/>
 				              		</div>
-				              		<div class="col-8">
+				              		<div class="col-6">
 				              			HTML editor is an iPad only feature.Which makes you possible to view and edit any webpages source code with syntax highlighting right on your iPad.
 				              			<br />
-				              			Sure you can create a new webpage with HTML editor and view the result,you also can format the source code or just share them with your friends.
+				              			Sure you can create a new webpage with HTML editor and view the result,you also can format source codes or just share them with your friends.
 				              			<br />
 				              			It totaly optimized for touch screen.
 				              		</div>
 				              	</section>
 			              </p>
-			              <p>5.Remote control(With HTTP Server):Remote to,Load URL in MIHTool|Safari|Chrome;Inject Javascript in current webpage;Clear website data;Get HAR data;Get source code;Get screenshots…</p>
-			              <p>6.Show WebKit Debug Borders(Compositing Render Layers).</p>
-			              <p>7.Show Webkit Repaint Counter(Paint Rects).</p>
-			              <p>8.Emulate iPhone.</p>
-			              <p>9.User agent switcher.</p>
+			              <p>5.Remote control(With HTTP Server):Remote to,Load URL in MIHTool|Safari|Chrome;Inject Javascript in current webpage;Clear website data;Get HAR data;Get source code;Get screenshots…
+			              		<button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_4">Learn More...</button>
+			              		<section id="features_ipad_4" class="features-detail collapse row">
+				              		<div class="col-6">
+				              			Turn ON MIHTool's HTTP Server you will get a HTTP link like <strong>http://192.168.1.101:1630</strong>,this link allows you to be able to remote control MIHTool from any remote computer(window,mac,linux,or another iPad) in the same local network.
+				              			<br />
+				              			Open the HTTP link from a remote computer,you will see many commands are available for you.
+				              			<br />
+				              			Almost each feature of MIHTool can be remote control with it's command,such as Load URL in MIHTool|Safari|Chrome;Web Inspector;Inject Javascript in current webpage;View history;Clear website data;Get HAR data;Get source code;Get screenshots,and so on.
+				              			<br />
+				              			All remote commands are REST like so you can write some auto-run scripts to automatically test your wepages.This is very conveniently for you to control multi devices form a single computer at the same time.
+				              		</div>
+				              		<div class="col-6">
+				              			<img src="images/mih/screenshots/4.png"/>
+				              		</div>
+				              	</section>
+			              </p>
+			              <p>6.Show WebKit Debug Borders(Compositing Render Layers).
+			              		<button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_5">Learn More...</button>
+			              		<section id="features_ipad_5" class="features-detail collapse row">
+				              		<div class="col-6">
+				              			<img src="images/mih/screenshots/1.png"/>
+				              		</div>
+				              		<div class="col-6">
+				              			Show WebKit Debug Borders(Compositing Render Layers) and Show Webkit Repaint Counter(Paint Rects) is a way for you
+				              			 to optimize your web apps and make them 60FPS performance.
+				              			 <br />
+				              			 To learn how to optimize web apps please check 
+				              			 <ul>
+				              			 	<li><a class="re-link" href="http://jankfree.org/">Jank Free</a></li>
+				              			 	<li><a class="re-link" href="https://developer.apple.com/videos/wwdc/2012/?id=601">Optimizing Web Content in UIWebViews and Websites on iOS</a></li>
+				              			 	<li><a class="re-link" href="http://www.html5rocks.com/en/tutorials/speed/layers/">Accelerated Rendering in Chrome</a></li>
+				              			 	<li><a class="re-link" href="https://www.igvita.com/slides/2012/web-performance-for-the-curious/">web performance for the curious</a></li>
+				              			 </ul>
+				              		</div>
+				              	</section>
+			              </p>
+			              <p>7.Show Webkit Repaint Counter(Paint Rects).
+			              		<button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_5">Learn More...</button>
+			              </p>
+			              <p>8.Emulate iPhone.
+			              		<button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_6">Learn More...</button>
+			              		<section id="features_ipad_6" class="features-detail collapse row">
+				              		<div class="col-12">
+				              			Emulate iPhone is an iPad only feature.Which makes you possible to see how your webpages look like on iPhone without an iPhone.
+				              		</div>
+				              	</section>	
+			              </p>
+			              <p>9.User agent switcher.
+			              		<button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_7">Learn More...</button>
+			              		<section id="features_ipad_7" class="features-detail collapse row">
+				              		<div class="col-12">
+				              			User agent switcher is an iPad only feature.Which makes you possible to switch other platform's broswer user agent,such as android,pc,and mac.
+				              		</div>
+				              	</section>	
+			              </p>
 			              <p>10.More developer bookmarklets:Firebug,YSlow,JS Console,PageSpeed,GTmetrix…</p>
 			              <p>11.Evaluating JavaScript in the address bar.</p>
 			              <p>12.Full screen mode(Shake Device To Toggle Full Screen Mode).</p>
 			              <p>13.Disable cache.</p>
 			              <p>14.Clear history,clear cache,clear cookies, clear local storage.</p>
 			              <p>15.Keep awake(Default is ON).</p>
-			              <p>16.HAR Viewer.(Also see <a target="_blank" class="re-link" href="https://github.com/unbug/logproxy">logproxy</a>)</p>
+			              <p>16.HAR Viewer.(Also see <a target="_blank" class="re-link" href="https://github.com/unbug/logproxy">logproxy</a>)
+			              		<button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_8">Learn More...</button>
+			              		<section id="features_ipad_8" class="features-detail collapse row">
+				              		<div class="col-6">
+				              			With HAR Viewer you can see your webpages network traffic waterfall and export the HAR data for more advanced research.
+				              			<br />
+				              			HAR Viewer is iPad only,you can use remote control to export HAR data and view in <a class="re-link" href="http://www.softwareishard.com/har/viewer/">Online HAR Viewer</a>(Be sure the "Validate data before processing?" box is un-checked .)
+				              		</div>
+				              		<div class="col-6">
+				              			<img src="images/mih/screenshots/5.png"/>
+				              		</div>
+				              	</section>	
+			              </p>
 			              <p>17.Performance API.</p>
-			              <p>18.Polyfill Manager(simulate APIs for javaScript to Objective-C communication,<a target="_blank" class="re-link" href="http://youtu.be/uL2feHKevRE">demo</a>)</p>
-			              <p>19.NPM Modules (To require() any module on npm in web inspector console <a target="_blank" class="re-link" href="https://gist.github.com/mathisonian/c325dbe02ea4d6880c4e">with browserify</a>)</p>
+			              <p>18.Polyfill Manager(simulate APIs for javaScript to Objective-C communication,<a target="_blank" class="re-link" href="http://youtu.be/uL2feHKevRE">demo</a>)
+			              		<button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_9">Learn More...</button>
+			              		<section id="features_ipad_9" class="features-detail collapse row">
+				              		<div class="col-12">
+				              			You might build webpages for hybird apps,and your webpages need to communicate to the native app.You can use Polyfill Manager to simulate native app's APIs,so you can debug you webpages before the native app finished,even the native app has not been installed on your device.
+				              			<br />
+				              			Please check this <a href="#slide-8" onclick="goToByScroll(8)">video</a> to see how it works.
+				              		</div>
+				              	</section>	
+			              </p>
+			              <p>19.NPM Modules (To require() any module on npm in web inspector console <a target="_blank" class="re-link" href="https://gist.github.com/mathisonian/c325dbe02ea4d6880c4e">with browserify</a>)
+			              		<button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_10">Learn More...</button>
+			              		<section id="features_ipad_10" class="features-detail collapse row">
+				              		<div class="col-6">
+				              			To require() any module on npm in web inspector console <a target="_blank" class="re-link" href="https://gist.github.com/mathisonian/c325dbe02ea4d6880c4e">with browserify</a>
+				              			<br />
+				              			Browsers don't have the require method defined, but Node.js does. With Browserify you can write code that uses require in the same way that you would use it in Node.
+				              			<br />
+				              			This feature makes MIHTool more powerful and easier for you to debug and optimize your webpages.
+				              		</div>
+				              		<div class="col-6">
+				              			<img src="images/mih/screenshots/npm.gif"/>
+				              		</div>
+				              	</section>	
+			              </p>
 					  </div>
 					  <div class="tab-pane fade" id="features_iphone">
 						  <h2 class="bs-callout bs-callout-info">MIHTool helps Front-End Engineers to debug and optimize their webpages on iPad and iPhone</h2>
