--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head lang="en">
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-	
-	<title>MIHTool - iOS Web Debugger Pro</title> 
-	
+
+	<title>MIHTool - iOS Web Debugger Pro</title>
+
 	<meta name="mobile-web-app-capable" content="yes">
   	<meta name="apple-mobile-web-app-capable" content="yes">
   	<link rel="shortcut icon" href="images/mih/logo/iPad-Retina.png" >
@@ -13,17 +13,17 @@
   	<link rel="apple-touch-icon" sizes="114x114" href="images/mih/logo/iPhone-Retina.png"/>
   	<link rel="apple-touch-icon" sizes="72x72" href="images/mih/logo/iPhone-Retina.png"/>
   	<link rel="apple-touch-icon" sizes="144x144" href="images/mih/logo/iPad-Retina.png"/>
-  	
-	<meta name="description" content="MIHTool helps Front-End Engineers to debug and optimize their webpages on iPad and iPhone" />	    
+
+	<meta name="description" content="MIHTool helps Front-End Engineers to debug and optimize their webpages on iPad and iPhone" />
 	<meta name="keywords" content="mobile web debug,remote debug safari,mobile web inspect,mobile html editor,Emulate iPhone,weinre for mobile,firebug for mobile,mobile web user agent">
 	<meta property="og:title" content="">
 
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="fancybox/jquery.fancybox-v=2.1.5.css" type="text/css" media="screen">
     <link rel="stylesheet" href="css/font-awesome.min.css" rel="stylesheet">
-	
-	<link rel="stylesheet" type="text/css" href="css/style.css">	
-	
+
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+
 	<link rel="prefetch" href="images/zoom.png">
 	<script>
 		window.onload = function(){
@@ -39,15 +39,15 @@
 <body>
 	<div class="navbar navbar-fixed-top" data-activeslide="1">
 		<div class="container">
-		
+
 			<!-- .navbar-toggle is used as the toggle for collapsed navbar content -->
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			
-			
+
+
 			<div class="nav-collapse collapse navbar-responsive-collapse">
 				<ul class="nav row">
 					<li data-slide="1" class="col-12 col-sm-2"><a id="menu-link-1" href="#slide-1" title="Home"><span class="icon icon-home"></span> <span class="text">HOME</span></a></li>
@@ -66,8 +66,9 @@
 			</div><!-- /.nav-collapse -->
 		</div><!-- /.container -->
 	</div><!-- /.navbar -->
-	
-	
+
+  <div class="codelf"><a href="http://unbug.github.io/codelf/" class="re-link">Search over projects from Github, Bitbucket, Google Code and more to find real-world usage variable names</a></div>
+
 	<!-- === Arrows === -->
 	<div id="arrows">
 		<div id="arrow-up" class="disabled"></div>
@@ -76,8 +77,8 @@
 		<div id="arrow-right" class="disabled visible-lg"></div>
 		<div class="share-button"></div>
 	</div><!-- /.arrows -->
-	
-	
+
+
 	<!-- === MAIN Background === -->
 	<div class="slide story" id="slide-1" data-slide="1">
 		<div class="container">
@@ -97,7 +98,7 @@
 			</div><!-- /row -->
 		</div><!-- /container -->
 	</div><!-- /slide1 -->
-	
+
 	<!-- === Slide 2 === -->
 	<div class="slide story" id="slide-2" data-slide="2">
 		<div class="container">
@@ -131,7 +132,7 @@
 			</div><!-- /row -->
 		</div><!-- /container -->
 	</div><!-- /slide2 -->
-	
+
 	<!-- === SLide 3 - Portfolio -->
 	<div class="slide story" id="slide-3" data-slide="3">
 		<div class="row">
@@ -146,7 +147,7 @@
 			<div class="col-12 col-sm-4 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="images/mih/screenshots/8.png"><img class="thumb" src="images/mih/screenshots/8.png" alt=""></a></div>
 		</div><!-- /row -->
 	</div><!-- /slide3 -->
-	
+
 	<!-- === Slide 4 - Process === -->
 	<div class="slide story" id="slide-4" data-slide="4">
 		<div class="container">
@@ -257,7 +258,7 @@
 				              			Show WebKit Debug Borders(Compositing Render Layers) and Show Webkit Repaint Counter(Paint Rects) is a way for you
 				              			 to optimize your web apps and make them 60FPS performance.
 				              			 <br />
-				              			 To learn how to optimize web apps please check 
+				              			 To learn how to optimize web apps please check
 				              			 <ul>
 				              			 	<li><a class="re-link" href="http://jankfree.org/">Jank Free</a></li>
 				              			 	<li><a class="re-link" href="https://developer.apple.com/videos/wwdc/2012/?id=601">Optimizing Web Content in UIWebViews and Websites on iOS</a></li>
@@ -276,7 +277,7 @@
 				              		<div class="col-12">
 				              			Emulate iPhone is an iPad only feature.Which makes you possible to see how your webpages look like on iPhone without an iPhone.
 				              		</div>
-				              	</section>	
+				              	</section>
 			              </p>
 			              <p>9.User agent switcher.
 			              		<button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_9">Learn More...</button>
@@ -284,7 +285,7 @@
 				              		<div class="col-12">
 				              			User agent switcher is an iPad only feature.Which makes you possible to switch other platform's broswer user agent,such as android,pc,and mac.
 				              		</div>
-				              	</section>	
+				              	</section>
 			              </p>
 			              <p>10.More developer bookmarklets:Firebug,YSlow,JS Console,PageSpeed,GTmetrix…</p>
 			              <p>11.Evaluating JavaScript in the address bar.</p>
@@ -303,7 +304,7 @@
 				              		<div class="col-6">
 				              			<img src="images/mih/screenshots/5.png"/>
 				              		</div>
-				              	</section>	
+				              	</section>
 			              </p>
 			              <p>17.Performance API.
 			              		<button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_17">Learn More...</button>
@@ -316,7 +317,7 @@
 				              			<br />
 				              			The Performance interface represents timing related performance information for the given page.
 				              		</div>
-				              	</section>	
+				              	</section>
 			              </p>
 			              <p>18.Polyfill Manager(simulate APIs for javaScript to Objective-C communication,<a target="_blank" class="re-link" href="http://youtu.be/uL2feHKevRE">demo</a>)
 			              		<button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_18">Learn More...</button>
@@ -326,7 +327,7 @@
 				              			<br />
 				              			Please check this <a href="#slide-8" onclick="goToByScroll(8)">video</a> to see how it works.
 				              		</div>
-				              	</section>	
+				              	</section>
 			              </p>
 			              <p>19.NPM Modules (To require() any module on npm in web inspector console <a target="_blank" class="re-link" href="https://gist.github.com/mathisonian/c325dbe02ea4d6880c4e">with browserify</a>)
 			              		<button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_19">Learn More...</button>
@@ -341,7 +342,7 @@
 				              		<div class="col-6">
 				              			<img src="images/mih/screenshots/npm.gif"/>
 				              		</div>
-				              	</section>	
+				              	</section>
 			              </p>
 					  </div>
 					  <div class="tab-pane fade" id="features_iphone">
@@ -464,7 +465,7 @@
 				              		<div class="col-12">
 				              			你无需再购买一台iPhone就能在iPad上模拟iPhone的尺寸直接调试你的页面。
 				              		</div>
-				              	</section>	
+				              	</section>
 						</p>
 						<p>9.User agent 切换.
 								<button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_zh_9">了解更多...</button>
@@ -472,7 +473,7 @@
 				              		<div class="col-12">
 				              			你可以直接在 MIHTool 里切换其他浏览器的 UA，包含有 android,mac,window 相关30多个设备的 UA。
 				              		</div>
-				              	</section>	
+				              	</section>
 						</p>
 						<p>10.实用开发者调试书签类工具(Firebug,YSlow,JS Console,PageSpeed,GTmetrix…).</p>
 						<p>11.在地址栏执行JS脚本.</p>
@@ -491,7 +492,7 @@
 				              		<div class="col-6">
 				              			<img src="images/mih/screenshots/5.png"/>
 				              		</div>
-				              	</section>	
+				              	</section>
 						</p>
 						<p>17.Performance API.
 								<button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_zh_17">了解更多...</button>
@@ -512,7 +513,7 @@
 				              			<br />
 				              			参看此演示 <a href="#slide-8" onclick="goToByScroll(8)">视频</a>。
 				              		</div>
-				              	</section>	
+				              	</section>
 						</p>
 						<p>19.NPM Modules (在 web inspector console 里通过 require() 加载 npm 模块)
 			              		<button type="button" class="btn btn-success btn-xs" data-toggle="collapse" data-target="#features_ipad_zh_19">了解更多...</button>
@@ -525,7 +526,7 @@
 				              		<div class="col-6">
 				              			<img src="images/mih/screenshots/npm.gif"/>
 				              		</div>
-				              	</section>		
+				              	</section>
 					    </p>
 					  </div>
 					  <div class="tab-pane fade" id="features_iphone_zh">
@@ -548,7 +549,7 @@
 			</div><!-- /row -->
 		</div><!-- /container -->
 	</div><!-- /slide4 -->
-	
+
 	<!-- === Slide 5 === -->
 	<div class="slide story" id="slide-5" data-slide="5">
 		<div class="container">
@@ -577,7 +578,7 @@
 			</div><!-- /row -->
 		</div><!-- /container -->
 	</div><!-- /slide5 -->
-	
+
 	<!-- === Slide 6 / Contact === -->
 	<div class="slide story" id="slide-6" data-slide="6">
 		<div class="container">
@@ -1089,14 +1090,14 @@
 	<script type="text/javascript" src="fancybox/jquery.fancybox.pack-v=2.1.5.js"></script>
 	<script src="js/script.js"></script>
 	<script src="js/share.min.js"></script>
-	
-	
+
+
 	<!-- fancybox init -->
 	<script>
 	$(document).ready(function(e) {
 		var lis = $('.nav > li');
 		menu_focus( lis[0], 1 );
-		
+
 		$(".fancybox").fancybox({
 			padding: 10,
 			helpers: {
@@ -1124,6 +1125,6 @@
 	      function hb(){
 	      var aa = document.querySelectorAll('a');for(var i=0;i<aa.length;i++){if(/tongji/g.test(aa[i].href)){aa[i].style.display='none';clearInterval(t);break;};}}
 	      t = setInterval(hb,1000);
-	    })(); 
+	    })();
 	</script>
 </html>
